# pytravie

./: .cruft.json  .pre-commit-config.yaml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  Pipfile  README.rst  pyproject.toml  setup.cfg  setup.py  squash-last-two
.githooks/: install.bash
.github/: ISSUE_TEMPLATE.md
.github/workflows/: pre-commit.yml  python-package.yml  python-release.yml
.pre-commit/: version-change-check.bash
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
tests/: aqueue_thread_test.py
travie/: OP.py  Yield.py  __init__.py  _extend.py  _pipeline_overloads.py  aqueue_thread.py  decorators.py  extend.py  indexed_property.py  loop_interupter.py  multiprocess_lock.py  pipeline.py  poperator.py  pushd.py  queue_thread.py  singleton.py  threadsafefile.py
travie/funcs/: __init__.py  _getop.py  _group_by_easy_overloads.py  _typing.py  filter.py  group_by_easy.py  sorted.py
travie/memoized/: __init__.py  _typing.py  classproperty.py  group_expirable_property.py  instancemethod.py  property.py  slots.py
travie/run_async/: _OnShutdown.py  __init__.py  _run_async.py  run_async_thread.py
